# sparebank1-cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TERMS.md  install.sh
.github/workflows/: release.yml
docs/api/: accounts_16ccbd68-056a-4575-b033-b1692fff98f4.json  accounts_30b36c06-4fe6-4426-a3e9-a99f88ab6995.json  accounts_4417cb9c-3a4a-45d6-a06b-4f5a31d915a1.json  accounts_81251ce5-7266-4900-931d-e3c52645520a.json  accounts_91ac5ad4-3dfe-433d-8f26-9be280305a5f.json  accounts_d1e2d5ca-3321-4791-9114-2c702adbfdbf.json  catalog.json  helloworld_d308a2d8-f91d-4b68-a87e-103814bda50c.json  transactions_0650ec42-e688-42c4-b588-d1f65f98af2c.json  transactions_117b7d16-a1d5-4a06-b390-daabeb47915d.json  transactions_3d1df4ba-c01b-46f4-9a68-c32c07d9c8d9.json  transactions_d1e1ab4d-9613-4d34-9b08-7d0d0b7757e9.json  transfer_85dcc486-3f47-4eba-982c-805789fc5427.json  transfer_9bc60623-b3ce-4e32-888d-a1eae9d0c8ab.json  transfer_bb9cca27-7168-4a75-80c1-2486dab3f572.json
skills/sparebank1-accounts/: SKILL.md
skills/sparebank1-context/: SKILL.md
skills/sparebank1-shared/: SKILL.md
skills/sparebank1-transfers/: SKILL.md
src/: auth.rs  cli.rs  client.rs  error.rs  format.rs  main.rs  models.rs  secrets.rs  terms.rs  util.rs
src/commands/: accounts.rs  auth.rs  mod.rs  summary.rs  transactions.rs  transfer.rs
