[package]
name = "sparebank1-cli"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "CLI for the SpareBank 1 personal banking API (accounts, transactions, transfers) with BankID OAuth login. Designed for AI agent consumption."
license = "MIT"
repository = "https://github.com/magnusrodseth/sparebank1-cli"
readme = "README.md"
keywords = ["sparebank1", "banking", "cli", "bankid", "norway"]
categories = ["command-line-utilities"]

# The installed binary is `sb1`.
[[bin]]
name = "sb1"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
webbrowser = "1"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
comfy-table = "7"
dirs = "5"
rpassword = "7"

# Keyring backend is platform-specific so the build needs no system libraries:
# macOS uses the native Keychain; Linux uses the kernel keyutils (no libdbus);
# Windows uses the Credential Manager. The `keychain` SB1_STORE option maps to
# whichever of these is native to the platform.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
